﻿2019-12
------------------------------------------------------------------------------------------------------------------------------------
REFACTOR:   TJD - Use std::tm rather than struct tm.
ADD:        TJD - Constructor taking array parameter.

2018-09
------------------------------------------------------------------------------------------------------------------------------------
CHANGE:     Use std::unique_ptr for CAstroImage factory function returns.
CHANGE:     Use std::unique_ptr for factory function returns.

2017-06 (2017-06-30)
------------------------------------------------------------------------------------------------------------------------------------
BUG:      	#22 - Parameter checking
BUG:        #23 - Parameter checking
BUG:        #24 - Parameter checking

2016.04 (2016-04-30)
------------------------------------------------------------------------------------------------------------------------------------
BUG:        #1574420 - Not displaying RA/Dec correctly.
BUG:        #1571169 - Not stripping off "'" character.
BUG:        #1571151 - Date/Time Display incorrect
CHANGE      Change keywords to use non-templated functions and create hierarchy.
CHANGE:     PAstroFile to a std::shared_ptr<>, from a boost::shared_ptr<>
FIX:        Incorrect algorithm being used in CImagePlane to calculate the rendered value whenrendering an 8 bit mono image.
CHANGE:     Processing of special keywords changed to reflect use of cfitsio instead of CCfits.